k8s/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
  namespace: express-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-api
  template:
    metadata:
      labels:
        app: express-api
    spec:
      volumes:
        - name: express-api-jwt-secret
          secret:
            secretName: express-api-jwt-secret
      containers:
        - name: express-api
          image: registry.digitalocean.com/express-api/api:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "sequelize db:migrate"]
          ports:
          - containerPort: 80
          volumeMounts:
          - name: express-api-jwt-secret
            mountPath: "/app/private.pem"
            subPath: private.pem
          - name: express-api-jwt-secret
            mountPath: "/app/public.pem"
            subPath: public.pem
