k8s/api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-api-ingress
  namespace: express-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_forwarded_proto = 'http') {
        return 301 https://$host$request_uri;
      }
    nginx.org/client-max-body-size: "50m"
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - api.EXAMPLE.COM
    secretName: express-api-tls
  rules:
    - host: api.EXAMPLE.COM
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: express-api
                port:
                  number: 80
